fix(mediawiki): 🐛 remove extra padding from change list items

--- a/skinStyles/mediawiki/special/mediawiki.special.changeslist.less
+++ b/skinStyles/mediawiki/special/mediawiki.special.changeslist.less
@@ -163,7 +163,6 @@
 
 .mw-changeslist-line,
 .mw-contributions-list li {
-	padding: var( --space-sm ) var( --space-xs ) !important;
 	margin: 0 0 0 16px !important;
 	color: var( --color-subtle );
 	border-radius: var( --border-radius-base );
